@@ -1,12 +1,13 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2012-08-07 15:07
+// This file was generated on 2012-09-07 11:10
 
 $extensionPath = t3lib_extMgm::extPath('ics_od_datastore');
 return array(
 	'tx_icsoddatastore_dlfile' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_dlfile.php',
 	'tx_icsoddatastore_hitcounter' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_hitcounter.php',
 	'tx_icsoddatastore_makelink' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_makelink.php',
+	'tx_icsoddatastore_stats_hook' => $extensionPath . 'hook/class.tx_icsoddatastore_stats_hook.php',
 	'tx_icsoddatastore_tcafeadmin' => $extensionPath . 'hook/class.tx_icsoddatastore_TCAFEAdmin.php',
 	'tx_icsoddatastore_dynflex' => $extensionPath . 'lib/class.tx_icsoddatastore_dynflex.php',
 	'tx_icsoddatastore_filecontrol' => $extensionPath . 'lib/class.tx_icsoddatastore_filecontrol.php',
