@@ -1,3 +1,6 @@
+2012-09-07 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added stat download on list and single view.
+
 2012-09-06 Tsi YANG <tsi@in-cite.net>
 	* Fix: Retrieved licence's label.	
 
